deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: local
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: django
    tier: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      tier: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: django
        tier: app
    spec:
      containers:
        - image: techmatt/k8s:latest
          name: app
          ports:
            - containerPort: 8000
              name: app
          volumeMounts:
            - name: django-app-data
              mountPath: /vol/web
          volumes:
            - name: django-app-data
              persistentVolumeClaim:
                claimName: django-app-pvc
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
